@@ -10,8 +10,8 @@ noinst_HEADERS = roots.h
 
 INCLUDES = -I$(srcdir)/../err
 
-TESTS = $(srcdir)/test-macros $(srcdir)/test-bisection \
-	$(srcdir)/test-falsepos $(srcdir)/test-secant $(srcdir)/test-newton
+TESTS = test-macros test-bisection \
+	test-falsepos test-secant test-newton
 EXTRA_DIST = test-macros test-bisection test-falsepos test-secant test-newton
 
 TESTS_ENVIRONMENT = BUILDDIR=@full_top_builddir@/roots SRCDIR=@full_top_srcdir@ $(SHELL) -x
